src/manifests/dense-service/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: models
  labels:
    app.kubernetes.io/managed-by: gen_dense
