src/manifests/dense-service/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dense-deployment
  namespace: inference
  labels: &id001
    app.kubernetes.io/name: dense
    app.kubernetes.io/component: embedder
    app.kubernetes.io/managed-by: gen_dense
    app.kubernetes.io/instance: dense
    env: nonprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dense
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels: *id001
    spec:
      serviceAccountName: dense-sa
      containers:
      - name: dense
        image: ghcr.io/athithya-sakthivel/dense:2026-05-06-06-15--70eca4b@sha256:c8a9fbb234cb355f530b3ecf6a14c1ebbecbaf24b74e6c865ca79a0073afbe70
        ports:
        - containerPort: 8200
        livenessProbe:
          httpGet:
            path: /health
            port: 8200
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8200
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /readyz
            port: 8200
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 60
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tmp-writable
          mountPath: /tmp
        - name: tmp-writable
          mountPath: /var/tmp
        - name: tmp-writable
          mountPath: /usr/tmp
        - name: models-cache
          mountPath: /models_cache
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      volumes:
      - name: tmp-writable
        emptyDir: {}
      - name: models-cache
        emptyDir: {}
